# rag

./: .gitignore  JOURNAL.md  LICENSE  README.md
backend/poc/: Taskfile.yml  docker-compose.yml  main.py  pyproject.toml
backend/poc/scripts/: extraction.py  init.py  lib.py  output.py  pipeline.py  pipeline_brouillon.py  transformation.py  var.py  vectorisation.py
les_coulisses/: JOURNAL.md  README.md
les_coulisses/declencheur/cuisine/: main.go
les_coulisses/la_cuisine/les_parties/rag/: .gitignore  pyproject.toml
les_coulisses/la_cuisine/les_parties/rag/fiches_ingredients/: llm.py
les_coulisses/la_cuisine/les_parties/rag/recettes/: embedding.py  ingestion.py  retrieval.py
les_coulisses/la_cuisine/les_parties/vectorisation/fiches_ingredients/: donnees.go  données.go  model.go
les_coulisses/service_blanc/test/: main_test.go
les_coulisses/service_blanc/test/route/: routes.go
les_coulisses/service_blanc/units/routes/: public.go  vars.go
poc/: .gitignore  go.mod  main.py  pyproject.toml
poc/scripts/: index.py  pipeline.py
rag-backend/ai/: main.py  pyproject.toml  server.py
rag-backend/ai/internal/: init_db.py
rag-backend/ai/scripts/: inputs.py
rag-backend/ai/tests/: test_main.py  test_routes.py
rag-backend/api-gateaway-go/: README.md  go.mod  main.go
