[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "gradio>=6.15.1",
    "pymilvus[milvus-lite]==2.6.9",
    "llama-index>=0.14.22",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-milvus>=1.1.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-pymupdf4llm>=0.5.0",
    "langchain-ollama>=1.1.0",
    "langchain-milvus==0.3.3",
    "pandas>=2.3.3",
    "spacy>=3.8.14",
    "rich>=15.0.0",
    "en-core-web-sm",
    "fr-core-news-sm",
    "transformers>=5.12.1",
    "torch>=2.12.1",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "langchain-pymupdf-layout>=0.1.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.18",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
# diagnosticMode = "openFilesOnly"
useLibraryCodeForTypes = false
reportMissingTypeStubs = false
exclude = [
  ".venv",
  "**/__pycache__",
  "**/site-packages/transformers",
  "**/site-packages/torch"
]

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = [
  "E501",
  "F401"
]
[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl" }
