[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-milvus>=0.3.3",
    "langchain-ollama>=1.1.0",
    "langchain-pymupdf4llm>=1.27.2",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-vector-stores-milvus>=1.1.0",
    "pymilvus>=2.6.15",
]


[tool.pyright]
# Indique exactement où est l'environnement virtuel
venvPath = "."
venv = ".venv"

# OBLIGATOIRE pour Langchain/Milvus : force Pyright à lire le code source
useLibraryCodeForTypes = true

# (Optionnel) Pour éviter qu'il ne t'inonde d'avertissements sur le code des autres
reportMissingTypeStubs = false
